RESOLVED FIXED81229
[GTK] WebKitWebResource::load-failed uses the wrong marshaller
https://bugs.webkit.org/show_bug.cgi?id=81229
Summary [GTK] WebKitWebResource::load-failed uses the wrong marshaller
Victor Lucero
Reported 2012-03-15 09:55:03 PDT
bug detected when signal "load-failed" is trigged with a resource object error displayed by glib when the signal is triggered GLib-GObject-CRITICAL **: g_value_get_object: assertion `G_VALUE_HOLDS_OBJECT (value)' failed if signal is trigger by WebkitWebView ("resource-load-failed") or WebkitWebFrame the pointer is called w/o problemsand there is no error already fixed , i will submit the patch
Attachments
partch to fix typo (495 bytes, patch)
2012-03-15 10:29 PDT, Victor Lucero
no flags
Patch (1.37 KB, patch)
2012-03-16 09:08 PDT, Victor Lucero
no flags
Patch (1.37 KB, patch)
2012-03-16 09:17 PDT, Victor Lucero
no flags
Victor Lucero
Comment 1 2012-03-15 10:29:22 PDT
Created attachment 132073 [details] partch to fix typo here is the patch i make with the correction hope this help
Victor Lucero
Comment 2 2012-03-16 09:08:07 PDT
WebKit Review Bot
Comment 3 2012-03-16 09:10:26 PDT
Attachment 132292 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/gtk/ChangeLog', u'Source/Web..." exit_code: 1 Source/WebKit/gtk/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Victor Lucero
Comment 4 2012-03-16 09:17:23 PDT
WebKit Review Bot
Comment 5 2012-03-16 11:00:26 PDT
Comment on attachment 132294 [details] Patch Clearing flags on attachment: 132294 Committed r111027: <http://trac.webkit.org/changeset/111027>
WebKit Review Bot
Comment 6 2012-03-16 11:00:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.