[GTK] WebKitWebResource::load-failed uses the wrong marshaller https://bugs.webkit.org/show_bug.cgi?id=81229

Patch by Victor Lucero <victor.lucero@ipartner.cl> on 2012-03-16
Reviewed by Philippe Normand.

* webkit/webkitwebresource.cpp:
(webkit_web_resource_class_init): load-failed signal in WebkitWebResource was using the wrong marshaller

Canonical link: https://commits.webkit.org/98583@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111027 268f45cc-cd09-0410-ab3c-d52691b4dbfc